fix: Image border radius, gap

--- a/src/components/projectDetail/projectDetail.css
+++ b/src/components/projectDetail/projectDetail.css
@@ -1,6 +1,9 @@
 .projectDetail{
     max-width: 1100px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
 
 .projectDetailInfo{
@@ -28,7 +31,7 @@
     line-height: normal;
 }
 
-.projectImg{
+.projectDetailImg{
     width: 1100px;
     height: 300px;
     flex-shrink: 0;
@@ -38,11 +41,11 @@
     justify-content: space-evenly;
 }
 
-.projectImg .img{
+.projectDetailImg .img{
     height: 90%;
     border-radius: 0 0 25px 25px;
 }
-.projectImg .img2{
+.projectDetailImg .img2{
     height: 90%;
     align-self: flex-end;
     border-radius: 25px 25px 0 0;
